public/errors/problems/39
main.cpp: In function ‘int main()’:
main.cpp:5:2: error: ‘cin’ was not declared in this scope
  cin>>a>>b;
  ^
main.cpp:5:2: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/include/c++/5/iostream:60:18: note:   ‘std::cin’
   extern istream cin;  /// Linked to standard input
                  ^
main.cpp:6:2: error: ‘cout’ was not declared in this scope
  cout<<a+b<<endl;
  ^
main.cpp:6:2: note: suggested alternative:
In file included from main.cpp:1:0:
/usr/include/c++/5/iostream:61:18: note:   ‘std::cout’
   extern ostream cout;  /// Linked to standard output
                  ^
main.cpp:6:13: error: ‘endl’ was not declared in this scope
  cout<<a+b<<endl;
             ^
main.cpp:6:13: note: suggested alternative:
In file included from /usr/include/c++/5/iostream:39:0,
                 from main.cpp:1:
/usr/include/c++/5/ostream:590:5: note:   ‘std::endl’
     endl(basic_ostream<_CharT, _Traits>& __os)
     ^
